fix collapse partialviews

--- a/Lexicon-LMS/Content/collapsestyle.css
+++ b/Lexicon-LMS/Content/collapsestyle.css
@@ -1,26 +1,3 @@
-﻿.content {
-    width: 310px;
-}
-
-
-table {
-border-collapse: collapse;
-width: 100%;
-}
-
-th {
-    padding: 8px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-}
-td {
-    padding: 8px;
-    text-align: left;
-    border-bottom: 1px solid #f5f5f5;
-}
-
-
-
-tr:hover {
-    background-color: #f5f5f5;
+﻿.far-right {
+   margin-left:20px;
 }
